# net-autocontrol

./: README.md  pyproject.toml  ubuntu.json
tests/: test_twitter_unfollow.py
twitter_unfollow/: hello-world.py
twitter_unfollow/KWCyber/: minds.py
twitter_unfollow/MirandaB/: mboyd.py
