[tool.poetry]
name = "twitter-unfollow"
version = "0.1.0"
description = ""
authors = ["Kevin H. <kevin@autoworkz.org>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.0"
cgroupspy = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
